Refactor code structure for improved readability and maintainability

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Quicksand:wght@300..700&display=swap");
 :root {
   --primary-color: #6d9773;
   --secondary-color: #0c3b2e;
